@@ -3315,13 +3315,9 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-specifier|public
-name|void
-name|testSkipColumn
-parameter_list|()
-throws|throws
-name|IOException
-block|{
+specifier|private
+specifier|static
+specifier|final
 name|KeyValue
 index|[]
 name|kvs
@@ -3541,16 +3537,31 @@ literal|"dont-care"
 argument_list|)
 block|,     }
 decl_stmt|;
-name|List
-argument_list|<
+specifier|public
+name|void
+name|testSkipColumn
+parameter_list|()
+throws|throws
+name|IOException
+block|{
 name|KeyValueScanner
-argument_list|>
+index|[]
 name|scanners
 init|=
-name|scanFixture
+operator|new
+name|KeyValueScanner
+index|[]
+block|{
+operator|new
+name|KeyValueScanFixture
 argument_list|(
+name|KeyValue
+operator|.
+name|COMPARATOR
+argument_list|,
 name|kvs
 argument_list|)
+block|}
 decl_stmt|;
 name|StoreScanner
 name|scan
@@ -3711,7 +3722,7 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
-comment|/*    * Test expiration of KeyValues in combination with a configured TTL for     * a column family (as should be triggered in a major compaction).    */
+comment|/*    * Test expiration of KeyValues in combination with a configured TTL for    * a column family (as should be triggered in a major compaction).    */
 specifier|public
 name|void
 name|testWildCardTtlScan
@@ -4117,6 +4128,76 @@ argument_list|(
 name|results
 argument_list|)
 argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
+name|testScannerReseekDoesntNPE
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|KeyValueScanner
+index|[]
+name|scanners
+init|=
+operator|new
+name|KeyValueScanner
+index|[]
+block|{
+operator|new
+name|KeyValueScanFixture
+argument_list|(
+name|KeyValue
+operator|.
+name|COMPARATOR
+argument_list|,
+name|kvs
+argument_list|)
+block|}
+decl_stmt|;
+name|StoreScanner
+name|scan
+init|=
+operator|new
+name|StoreScanner
+argument_list|(
+operator|new
+name|Scan
+argument_list|()
+argument_list|,
+name|CF
+argument_list|,
+name|Long
+operator|.
+name|MAX_VALUE
+argument_list|,
+name|KeyValue
+operator|.
+name|COMPARATOR
+argument_list|,
+name|getCols
+argument_list|(
+literal|"a"
+argument_list|,
+literal|"d"
+argument_list|)
+argument_list|,
+name|scanners
+argument_list|)
+decl_stmt|;
+comment|// Previously a updateReaders twice in a row would cause an NPE.  In test this would also
+comment|// normally cause an NPE because scan.store is null.  So as long as we get through these
+comment|// two calls we are good and the bug was quashed.
+name|scan
+operator|.
+name|updateReaders
+argument_list|()
+expr_stmt|;
+name|scan
+operator|.
+name|updateReaders
+argument_list|()
 expr_stmt|;
 block|}
 comment|/**    * TODO this fails, since we don't handle deletions, etc, in peek    */
